--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 server.port=8088
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.main.allow-circular-references=true
